Some adjustments and additions of some routes to the API on Swigger 🤗🤗
